# RNAMake.New

./: .gitignore  CMakeLists.txt  compiler.cmake  doxygen_config.txt  setup_python.py  xyz_matrix_unittest
cmake/: make_project.py  run_unittests.py  setup_python.py
cmake/build_clang/pybind11/: pybind11.cbp
pybind11/: pybind11.cbp
resources/motif_info/: explained_failures.csv  motifs_with_tcs.csv
resources/motif_libraries/: basepair_steps.db  hairpins.db  ideal_helices.db  junctions.db  tertiary_contact_hairpin_hairpin.db  tertiary_contact_junction_hairpin.db  tertiary_contact_junction_junction.db  two_ways.db
resources/residue_types/PROTEIN/: ASP.rtype  HIS.rtype
rnamake_new/: __init__.py  py_util.py  settings.py
rnamake_new/unittests/: all_atom_unittest.py  base_unittest.py  data_structures_unittest.py  math_unittest.py  primitives_unittest.py  secondary_structure_unittest.py  util_unittest.py
rnamake_new/unittests/integration/: parse_all_pdbs.py
src/: example.cpp
src/all_atom/: aligner.cc  aligner.h  all_atom.cc  atom.cc  atom.h  basepair.cc  basepair.h  chain.cc  chain.h  pdb_parser.cc  pdb_parser.h  pose.cc  pose.h  residue.cc  residue.h  residue_type.cc  residue_type.h  residue_type_set.cc  residue_type_set.h  rna_structure.cc  rna_structure.h  segment.cc  segment.h  segment_factory.cc  segment_factory.h  structure.cc  structure.h
src/base/: assertions.h  backtrace.cc  base.cc  file_io.cc  file_io.h  global_constants.cc  global_constants.h  json.cc  json.h  log.cc  log.h  logger.cc  logger.h  option.cc  option.h  paths.cc  paths.h  simple_string.cc  simple_string.h  string.cc  string.h  types.h  unique_ptr.h  vector_container.h
src/data_structures/: data_structures.cc  directed_graph.cc  directed_graph.h  graph.cc  graph.h  graph_adjacency_list.h  graph_base.h  graph_iter_list.h  new_graph.cc  new_graph.h  rna_structure_type_graph.cc  rna_structure_type_graph.h  segment_graph.cc  segment_graph.h
src/math/: math.cc  numerical.cc  numerical.h  quaternion.cc  quaternion.h  xyz_matrix.h  xyz_vector.h
src/primitives/: aligner.h  basepair.cc  basepair.h  chain.h  pose.cc  pose.h  primitives.cc  residue.h  rna_structure.cc  rna_structure.h  segment.cc  segment.h  structure.h
src/resource_management/: resource_builder.cc  resource_builder.h  resource_manager.h  segment_sqlite_library.cc  segment_sqlite_library.h  sqlite_library.cc  sqlite_library.h
src/secondary_structure/: aligner.h  basepair.cc  basepair.h  chain.cc  chain.h  parser.cc  parser.h  pose.cc  pose.h  residue.cc  residue.fwd.h  residue.h  rna_segment.cc  rna_segment.h  rna_structure.cc  rna_structure.h  secondary_structure.cc  segment.cc  segment.h  structure.cc  structure.h
src/segment_data_structures/: segment_graph.h  segment_merger.cc  segment_merger.h  sequence_updater.h
src/state/: aligner.cc  aligner.h  basepair.cc  basepair.h  chain.cc  chain.h  pose.cc  pose.h  residue.cc  residue.h  segment.cc  segment.h  structure.cc  structure.h
src/util/: bead.cc  bead.h  random_number_generator.cc  random_number_generator.h  rna_segment_type.cc  rna_segment_type.h  segment_type.cc  segment_type.h  sqlite3_connection.cc  sqlite3_connection.h  sqlite_wrappers.cc  sqlite_wrappers.h  util.cc  uuid.cc  uuid.h  x3dna.cc  x3dna.h
src/util/sqlite/: connection.cc  connection.h  database.h  field.h
unittests/: common.hpp  xyz_matrix_unittest.cpp
unittests/all_atom/: all_atom_basepair_unittest.cc  all_atom_basic_unittest.cc  all_atom_generate_all_segments.cc  all_atom_graph_unittest.cc  all_atom_pose_unittest.cc  all_atom_segment_unittest.cc  all_atom_structure_unittest.cc  all_pdbs_to_poses_unittest.cc  parse_all_pdbs_unittest.cc  pdb_parser_unittest.cc  state_segment_unittest.cc
unittests/base/: compression_unittest.cc  logger_unittest.cc  option_unittest.cc
unittests/data_structures/: graph_adjacency_list_unittest.cc  graph_iter_list_unittest.cc  graph_unittest.cc  new_graph_unittest.cc
unittests/math/: serialization_unittest.cc  xyz_matrix_unittest.cc
unittests/primitives/: iterator_adaptor_unittest.cc  primitive_memory_leak_unittest.cc  primitives_unittest.cc
unittests/resource_management/: resource_builder_unittest.cc  resource_manager_unittest.cc  sqlite_library_unittest.cc
unittests/secondary_structure/: parser_unittest.cc  ss_rna_structure_graph_unittest.cc
unittests/segment_data_structures/: segment_graph_unittest.cc  segment_merger_unittest.cc  sequence_updater_unittest.cc
unittests/unittest_resources/all_atom/HELIX.IDEAL.2/: HELIX.IDEAL.2_dssr.out
unittests/util/: json_unittest.cc  sqlite3_connection_unittest.cc  x3dna_on_all_pdbs_unittest.cc  x3dna_unittest.cc
